--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "bignumber.js": "7.2.1",
     "ethereumjs-util": "^5.2.0",
     "ethers": "^4.0.23",
+    "node-fetch": "^2.6.0",
     "reconnecting-websocket": "^4.1.10",
     "rxjs": "^5.4.1",
     "simple-jsonrpc-js": "0.0.10",
